# bootcamp-jornada-de-dados_2024

./: .gitignore  README.md  aula01.ipynb  bootcamp.ipynb  bootcamp.md  pyproject.toml
aula_01/: README.md
aula_01/notebooks/: Aula_01.ipynb
aula_01/src/: kpi.py
aula_02/: README.md
aula_02/notebooks/: Aula_02.ipynb
aula_02/src/: desafio02.py  exercicio_1.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_2.py  exercicio_20.py  exercicio_21.py  exercicio_22.py  exercicio_23.py  exercicio_24.py  exercicio_25.py  exercicio_3.py  exercicio_4.py  exercicio_5.py  exercicio_6.py  exercicio_7.py  exercicio_8.py  exercicio_9.py
aula_03/: Aula_03.ipynb  README.md
aula_03/notebooks/: Aula_03.ipynb
aula_03/src/: desafio.py  exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py
aula_04/: README.md
aula_04/notebooks/: Aula_04.ipynb
aula_04/src/: desafio.py  exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_12.py  exercicio_13.py  exercicio_14.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  exercicio_19.py  exercicio_20.py
aula_05/: =2  README.md  aula_05.ipynb  rmm_log.txt
aula_05/data/: num_rows.txt  ranking.csv  tempos_execucao.csv
aula_05/notebooks/: aula_05.ipynb
aula_05/src/: config.py  cudf_pandas_df.py  dask_cudf_1024.py  dask_cudf_256.py  dask_df.py  data_generate.py  duckdb_df.py  pandas_df.py  plot_ranking.py  polars_df.py  pyspark_df.py  teste.py  vaex_df.py
aula_06/: README.md
aula_06/notebook/: aula_06.ipynb
aula_06/src/: conflito_entre_black_e_flake8.py  exemplo01.py  exemplo_com_pre-commit.py  exemplo_com_tasks.py  exemplo_isort.py
aula_07/: README.md
aula_07/notebook/: aula_07.ipynb
aula_07/src/: desafio.py  exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py
aula_08/: README.md
aula_08/notebook/: aula_08.ipynb
aula_08/src/: etl.py  pipeline.py
aula_11/: README.md
aula_11/data/: exemplo.csv
aula_11/notebook/: aula_11.ipynb
aula_12/: README.md
aula_12/notebook/: aula_12.ipynb
aula_13/: README.md
aula_13/notebook/: aula_13.ipynb
aula_13/src/: __main__.py
aula_14_15/: README.md
aula_14_15/data/: products.csv
aula_14_15/notebook/: aula14_15.ipynb
aula_16/: README.md  projeto.md
aula_16/database/: biblioteca.db  database.db
aula_16/notebook/: aula_16.ipynb  projeto.ipynb
aula_16/src/: exemplo_crud.py  hero_bd.py  main.py  models.py
aula_17/: README.md
aula_17/notebook/: aula_17.ipynb
aula_17/src/: data_insertion.py  database.py  main.py  (+1 more)
aula_18/: README.md
aula_19/: Dockerfile  README.md  pyproject.toml
aula_19/notebook/: aula_19.ipynb
aula_19/src/: data.py  database.py  main.py  models.py  schema.py  test.db
aula_20/: README.md  docker-compose.yml  poetry.toml
bootcamp-SQL-e-analytics/: README.md
bootcamp-SQL-e-analytics/aula_01/: README.md  pyproject.toml
bootcamp-SQL-e-analytics/aula_01/Notebook/: aula_01.ipynb
bootcamp-WebScraping/: README.md  aula1.ipynb  pyproject.toml
bootcamp-WebScraping/aula_01/: README.md
bootcamp-WebScraping/aula_01/notebook/: aula1.ipynb
bootcamp-WebScraping/aula_01/src/: webscraping_example.py
utils/: extract_cells_jupyter.py
(+67 files in other folders)
