[tool.poetry]
name = "bootcamp-jornada-de-dados-2024"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nbformat = "^5.9.2"
pandas = "^2.2.1"
polars = "^0.20.13"
duckdb = "^0.10.0"
blue = "^0.9.1"
pyspark = "^3.5.1"
dask = "^2024.2.1"
dask-expr = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
