[tool.poetry]
name = "bootcamp-2024"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
ipykernel = "^6.29.3"
jupyter = "^1.0.0"
lab = "^8.1"
pandas = "^2.2.1"
polars = "^0.20.16"
duckdb = "^0.10.1"
pyspark = "^3.5.1"
vaex = "^4.17.0"
matplotlib = "^3.8.3"
dask-expr = "^1.0.5"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
taskipy = "^1.12.2"
pre-commit = "^3.7.0"
loguru = "^0.7.2"
pandera = "^0.18.3"
faker = "^24.9.0"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# Adicionando a configuração ao pyproject.toml para evitar conflitos
[tool.isort]
profile = "black"
# lib para automatizar tarefas
[tool.taskipy.tasks]
format = "isort .&&black .&&flake8" #verifica a formatação do código na sequência.
